[tool.poetry]
name = "pyoura"
version = "0.1.0"
description = "A python library of Cardano oura"
authors = ["Jerry <jerrycgh@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"
bottle = "^0.12.19"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
